--- a/src/main/resources/templates/authors.html
+++ b/src/main/resources/templates/authors.html
@@ -1,10 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="layout/master.html">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"/>
     <title>Title</title>
 </head>
 <body>
+    <div layout:fragment="context">
+        <div class="container">
+            <table class="table">
+                <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Date of Birth</th>
+                    <th>Interested</th>
+                    <th>Gender</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="au :${authors}">
+                    <td th:text="${au.name}"></td>
+                    <td th:text="${au.dateOfBirth}"></td>
+                    <td th:text="${au.interested}"></td>
+                    <td th:text="${au.gender}"></td>
+                </tr>
 
+                </tbody>
+            </table>
+        </div>
+    </div>
 </body>
 </html>
