--- a/src/main/resources/templates/posts.html
+++ b/src/main/resources/templates/posts.html
@@ -24,7 +24,7 @@
             <tr th:each="pos : ${allposts}">
                 <td th:text="${pos.tag}"></td>
                 <td th:text="${#strings.substring(pos.body,0,10)}"></td>
-                <td th:text="${pos.lastUpdated}"></td>
+                <td th:text="${pos.lastUpdated + ' '+ pos.showPrettyTime()}">  </td>
                 <td th:text="${pos.author.name}"></td>
                 <td><a href="#" th:href="@{'/posts/details/'+${pos.id}}"
                        class="btn btn-primary">Details</a></td>
