--- a/src/main/resources/templates/authors.html
+++ b/src/main/resources/templates/authors.html
@@ -31,6 +31,8 @@
 
                 </tbody>
             </table>
+
+            <a href="#" th:href="@{/authors/pdf}" class="btn btn-primary">PDF Report</a>
         </div>
     </div>
 </body>
