--- a/src/main/resources/templates/layout/master.html
+++ b/src/main/resources/templates/layout/master.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
   <head>
     <meta charset="utf-8"/>
@@ -28,10 +29,50 @@
 
   <body>
 
-    <div layout:fragment="navigation">
+    <nav class="navbar bg-dark navbar-expand-lg navbar-dark fixed-top">
+      <div class="container">
+        <a class="navbar-brand" href="/">
+          <i class="fa fa-leaf" aria-hidden="true"></i>
+          Blog
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
+                aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item" sec:authorize="isAuthenticated()">
+              <a class="nav-link bg-dark text-light" th:href="@{/author}">
+                Author Form</a>
+            </li>
+            <li class="nav-item" sec:authorize="isAuthenticated()">
+              <a class="nav-link bg-dark text-light" th:href="@{/post}">
+                Post Form</a>
+            </li>
+            <li class="nav-item" sec:authorize="!isAuthenticated()">
+              <a class="nav-link bg-dark text-light mt-4" th:href="@{/authors}">
+                Authors</a>
+            </li>
+          </ul>
 
 
-    </div>
+
+          <li class="nav-link" sec:authorize="isAuthenticated()">
+            <form action="#" th:action="@{/logout}" method="post">
+              <button class="nav-link btn-dark text-light border-0"><i class="fa fa-sign-out-alt" aria-hidden="true"></i>Logout</button>
+            </form>
+          </li>
+          <li class="nav-item" sec:authorize="!isAuthenticated()">
+            <a class="nav-link bg-dark text-light" th:href="@{/login}">
+              <i class="fa fa-sign-in-alt" aria-hidden="true"></i> Sign In</a>
+          </li>
+          <li class="nav-item" sec:authorize="!isAuthenticated()">
+            <a class="nav-link bg-dark text-light" href="register.html">
+              <i class="fa fa-user-plus" aria-hidden="true"></i> Register</a>
+          </li>
+        </div>
+      </div>
+    </nav>
 
 
 
