--- a/src/main/resources/templates/layout/master.html
+++ b/src/main/resources/templates/layout/master.html
@@ -67,7 +67,7 @@
               <i class="fa fa-sign-in-alt" aria-hidden="true"></i> Sign In</a>
           </li>
           <li class="nav-item" sec:authorize="!isAuthenticated()">
-            <a class="nav-link bg-dark text-light" href="register.html">
+            <a class="nav-link bg-dark text-light" th:href="@{/register}">
               <i class="fa fa-user-plus" aria-hidden="true"></i> Register</a>
           </li>
         </div>
